test/bad/functions/call5.px

func f(Int a, Bool b, Char c: 'c') def
    return

f(10)
